Move http server to plumo-core